Fix the caption spacing on the slider.

--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -57,11 +57,11 @@
     .caption {
       position: absolute;
       bottom: 5px;
-      width: 670px;
+      width: 660px;
       background: rgb(0, 51, 102);
       background: rgba(0, 51, 102, 0.6);
       color: #fff;
-      padding: 10px 5px 5px 20px;
+      padding: 10px 15px 5px 15px;
     }
   }
 
